# cardano-pubsub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
node/: Cargo.toml  README.md
node/docs/decisions/: 0001-async-runtime-tokio.md  0002-toml-via-serde.md  0003-logging-via-tracing.md  0004-cli-via-clap.md  0005-typed-errors.md  0006-receive-task-and-registration.md  0007-network-handle-actor-pattern.md  0008-subscription-mutator-shape.md  0009-crypto-trait-shape.md  0010-protocol-message-type-hierarchy.md  0011-pure-state-transition-core.md  0012-node-state-sharing-and-lifecycle.md  0013-subscription-list-is-authoritative-for-node-interests.md  0014-subscription-registry-interface-and-node-integration.md  0015-node-has-no-local-subscription-mutators.md  0016-topic-registry-interface-and-node-integration.md  0017-key-backed-peer-identity-and-signed-connection-control.md  0018-connection-selection-strategy-seam.md  0019-graceful-shutdown-lifecycle.md  0020-cross-registry-consistency-and-readiness.md  0021-fanout-strategy-seam-dedup-and-message-origin.md  0022-async-test-synchronization-strategy.md  (+1 more)
node/src/: acceptance.rs  config.rs  connection.rs  error.rs  event.rs  fanout.rs  lib.rs  main.rs  message.rs  network.rs  node.rs  peer.rs  received.rs  state.rs  topic.rs
node/tests/: candidate_set.rs  config_loading.rs  connections.rs  dissemination.rs  filter_composition.rs  mock_crypto_repro.rs  multi_publisher.rs  n_node_graph.rs  signed_message.rs  topic_filter.rs  topic_registry_network.rs  topic_runtime.rs  topic_validity.rs  two_node_ping.rs
(+13 files in other folders)
