[package]
name = "pubsub-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]

[[bin]]
name = "pubsub-node"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
proptest = "1"

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
